--- a/node/funcionarios/package.json
+++ b/node/funcionarios/package.json
@@ -2,8 +2,10 @@
   "name": "funcionarios",
   "version": "1.0.0",
   "description": "Cadastro de funcionários",
-  "main": "index.js",
+  "main": "funcionarios.js",
   "scripts": {
+    "start": "nodemon",
+    "dev": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -15,4 +17,4 @@
   "dependencies": {
     "axios": "^0.20.0"
   }
-} 
+}
